<resources>
    <string name="app_name">RappiTest</string>
    <string name="recomendado">Seis Recomendados para tí</string>
    <string name="proximos_es">Próximos estrenos</string>
    <string name="tendencias">Tendencia</string>
    <string name="en_espana">En España</string>
    <string name="en_espanol">En español</string>
    <string name="en_1993">Lanzados en 1993</string>
    <string name="emovie">eMovie</string>
    <string name="presioneDosVeces">Presione 2 veces para salir</string>
    <string name="api_key">c06fce03255ef224fabad691249b6019</string>
    <string name="rutaImagenes">https://image.tmdb.org/t/p/w500/</string>
    <string name="verTrailer">Ver Trailer</string>
    <string name="espanol">Español</string>
    <string name="ingles">Ingles</string>
    <string name="ruso">Ruso</string>
    <string name="japones">Japones</string>
    <string name="koreano">Koreano</string>
    <string name="italiano">Italiano</string>
</resources>