<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo_negro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.Home">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"        >

      <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:layout_margin="10dp"
          android:gravity="center"
          android:textSize="30sp"
          android:text="@string/emovie" />

      <TextView
          android:id="@+id/pr_ximos_es"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/proximos_es"
          android:layout_margin="2dp"
          android:textAppearance="@style/Sub_titulo" />

      <androidx.cardview.widget.CardView
          android:id="@+id/cardViewProximosEs"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />

      <TextView
          android:id="@+id/tendencia"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tendencias"
          android:layout_margin="2dp"
          android:textAppearance="@style/Sub_titulo" />

      <androidx.cardview.widget.CardView
          android:id="@+id/cardViewTendencia"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />

      <TextView
          android:id="@+id/recomendado"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/recomendado"
          android:layout_margin="2dp"
          android:textAppearance="@style/Sub_titulo" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/en_espanol"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"
            app:strokeColor="@color/black"
            app:cornerRadius="20dp"
            android:textAppearance="@style/TextoEnBottones"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            app:cornerRadius="20dp"
            android:text="@string/en_1993"

            style="?android:attr/buttonBarButtonStyle" />

      </LinearLayout>

      <androidx.cardview.widget.CardView
          android:id="@+id/cardViewRecomendado"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>